Fix jumping screen on hovering over hex on homepage Why: earlier version, when a user hovers over a hex, the scrollbar appears/disappears making screen jumping. This is not pleasant for users.

--- a/src/css/hex.css
+++ b/src/css/hex.css
@@ -7,8 +7,7 @@ body {
     JUMBOTRON STYLE
 ----------------------------------------------------- */
 .jumbotron.jumbotron-fluid {
-	padding-top: 0px;
-	padding-bottom: 1rem;
+    padding: 0rem 1rem 2rem 1rem;
 }
 
 .hex-container {
